# edgereasoning

./: .gitignore  Makefile  README.md  energy_model.py  extract_io_length.py  interactive.py  latency_model.py  notebook.ipynb  plot_accuracy_figs.py  plot_sweep.py  postprocess.py  power_model.py  pyproject.toml  requirements.txt  setup.py  validate_analyticals.py
analysis/: validate_latency.py
benchmarks/agentic_planner/: run.sh
config/: analytic.yaml
eval/server/mmlu/: .gitignore  run.sh  session.sh
eval/server/mmlu/callers/: base.sh  scale.sh
eval/server/mmlu/configs/: base.yaml  budget.yaml  direct.yaml  noreasoning.yaml  scale.yaml
eval/server/mmlu/scripts/: base.py  budget.py  direct.py  noreasoning.py  scale.py
eval/server/mmlu/src/data_loaders/: mmlu_loader.py
eval/server/mmlu/src/evaluators/: __init__.py  base_evaluator.py  noreasoning_evaluator.py  scale_evaluator.py
eval/server/mmlu/src/models/: __init__.py  vllm_model.py
eval/server/mmlu/src/telemetry/: monitor.py  (+1 more)
eval/server/planner/: planner.py  run.sh  sessions.sh
eval/server/planner/callers/: budget.sh  direct.sh  gpu.conf  models.conf  tt_scale.sh
eval/server/planner/configs/: budget.yaml  calendar_planner.yaml  direct_planner.yaml  meeting_planner.yaml  scale.yaml  trip_planner.yaml
eval/server/planner/src/: __init__.py
eval/server/planner/tests/: analyze_tokens.py  api_metrics.sh  check_vllm_metrics.sh  simple_eval_test.py  test_answer_extraction.py  test_base_evaluator.py  test_mmlu_loader.py  test_prompt.py  test_prompt_templating.py  test_scale.py  test_simple_metrics.py  test_specialized_evaluators.py  test_vllm_metrics.py
eval/server/planner/tools/: docker_setup.sh  resume_eval.py  shipVllm.sh
eval/tegra/: open.sh
eval/tegra/mmlu/: .gitignore  launch.sh  models.txt
eval/tegra/mmlu/callers/: base.sh  budget.sh  tt_scaling.sh
eval/tegra/mmlu/configs/: base.yaml  budget.yaml  custom.yaml  decode.yaml  noreasoning.yaml  scale.yaml
eval/tegra/mmlu/scripts/: base.py  budget.py  tt_scaling.py  utils.py
eval/tegra/mmlu/synthetic/: decode.py  prefill.py  tt_scaling.py
eval/tegra/mmlu/tokenizer/: create_synthetic_data.py
eval/tegra/tools/: container.sh
files/: benchmarks.yaml  models.yaml  results.yaml
latency_modeling/: fit_decode_latency.py
loaders/: analytic.py  benchmarks.py  models.py  results.py
plotting/: insights.py  plot_L1_PS.py  plot_accuracy_figs.py  plot_predicted_energy.py  utils.py
processing/: README.md  __init__.py  data_models.py  performance_analyzer.py  report_generator.py  result_consolidator.py
runners/: collect_env.py
scripts/: bootstrap.py  fetch_natural_planner.sh  fetch_token2metrics.sh  install.sh
(+36 files in other folders)
